// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcVideoBlock section should render iframe type VH when visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <iframe class="lc-video-block__video-object"
                  frameborder="no"
                  scrolling="no"
                  allowfullscreen
                  src="https://frontend.vh.yandex.ru/player/4def59fcc06effd9aeabedb7f1171e1a?loop=true&amp;autoplay=1&amp;mute=0"
          >
          </iframe>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render iframe type stream when visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <iframe class="lc-video-block__video-object"
                  frameborder="no"
                  scrolling="no"
                  allowfullscreen
                  src="//yastatic.net/yandex-video-player-iframe-api-bundles/1.0-2305/?loop=true&amp;muted=false&amp;autoplay=true&amp;hq_url=https%3A%2F%2Fstreaming.video.yandex-team.ru%2Fget%2Fvideo-nda%2Fm-114538-1636e7b903d-bd6ef4934dc7580e%2F480p.m3u8"
          >
          </iframe>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render iframe type vimeo when visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <iframe class="lc-video-block__video-object"
                  frameborder="no"
                  scrolling="no"
                  allowfullscreen
                  src="https://player.vimeo.com/video/234717047?loop=true&amp;autoplay=true&amp;muted=false"
          >
          </iframe>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render iframe type youtube when visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <iframe class="lc-video-block__video-object"
                  frameborder="no"
                  scrolling="no"
                  allowfullscreen
                  src="https://www.youtube.com/embed/jiOe-Ar8KOk?loop=1&amp;autoplay=1&amp;mute=0&amp;playlist=jiOe-Ar8KOk"
          >
          </iframe>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render iframe without src when not visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <iframe class="lc-video-block__video-object"
                  frameborder="no"
                  scrolling="no"
                  allowfullscreen
          >
          </iframe>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render video for uploaded media with sources when visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <video class="lc-video-block__video-object"
                 autoplay
                 playsinline
                 loop
                 controls
                 preload="auto"
          >
            <source src="https://streaming.video.yandex.ru/get/yndx-video/m-69033-1690643b9c3-c491e9a08b6caf39/480p.mp4"
                    type="video/mp4"
            >
            <source src="https://streaming.video.yandex.ru/get/yndx-video/m-69033-1690643b9c3-c491e9a08b6caf39/480p.webm"
                    type="video/webm"
            >
          </video>
        </div>
      </div>
    </div>
  </div>
</section>

`;

exports[`LcVideoBlock section should render video for uploaded media without sources when not visible 1`] = `

<section id
         class="lc-section lpc-section "
>
  <div class="lc-offsets lc-offsets_padding-top_m lc-offsets_padding-bottom_m">
    <div class="lc-video-block lc-video-block_width_s">
      <div class="lc-video-block__resizer lc-video-block__resizer_ratio_16x9">
        <div class="lc-video-block__content">
          <video class="lc-video-block__video-object"
                 autoplay
                 playsinline
                 loop
                 controls
                 preload="auto"
          >
          </video>
        </div>
      </div>
    </div>
  </div>
</section>

`;
